# Relay-RunAndTest

./: .gitignore  500kV_Model.bakx  500kV_Model.pscx  500kV_Model.psmx  CMakeLists.txt
code/: TestUnit.c  common.c  common.h  currentDiffRelay.c  dataStruct.h  deltaDistanceRelay.c  distanceRelay.c  line.c  lineStarter.c  overCurrentRelay.c  relayMain.c  zeroSeqCurrentRelay.c
config/: s1-bus1.conf  s1-line1 - 副本.conf  s1-line1.conf  s1-line2.conf  s1-line3.conf
data/: testdata-s.txt
